# agentum-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
agentum/: __init__.py  agent.py  cli.py  config.py  engine.py  events.py  exceptions.py  llm_providers.py  memory.py  messages.py  state.py  testing.py  tool.py  workflow.py
agentum/agent/: agent.py
agentum/cli/: main.py
agentum/core/: __init__.py  config.py  events.py  messages.py
agentum/engine/: __init__.py  compiler.py  nodes.py
agentum/memory/: __init__.py  base.py  implementations.py
agentum/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
agentum/rag/: __init__.py  knowledge_base.py  loaders.py  retrievers.py
agentum/testing/: __init__.py  evaluator.py  test_suite.py
agentum/tool/: tool.py
agentum/tools/: __init__.py  retrievers.py
agentum/tools/builtins/: __init__.py  filesystem.py  speech.py  web_search.py
agentum/workflow/: workflow.py
docs/: getting_started.md  index.md
docs/concepts/: index.md
docs/features/: advanced_rag.md  multi_modality.md  observability.md  providers.md  speech.md
examples/: 01_hello_agentum.py  02_simple_tool_usage.py  02_test_without_api.py  03_conditional_loop.py  04_true_agency.py  05_testing_and_evaluation.py  06_advanced_rag.py  07_professional_research.py  08_multiple_llms.py  09_vision_analysis.py  10_advanced_demo.py  11_speech_to_text.py  12_voice_assistant.py  13_advanced_rag_reranking.py  14_local_image_analysis.py  15_streaming_workflow.py  16_advanced_memory.py  17_planner_agent.py  earnings_report.txt
tests/: mock_llm.py  test_agency.py  test_comprehensive.py  test_engine.py  test_integration.py  test_workflow_creation.py
