[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentum"
version = "0.1.0"
description = "A Python-native framework for building, orchestrating, and observing multi-agent systems."
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["ai", "multi-agent", "workflow", "orchestration", "llm", "agents"]

# --- Core Dependencies ---
dependencies = [
    "pydantic>=2.7",
    "langchain-core>=0.3",
    "langchain-openai>=0.1",
    "langgraph>=0.0.47",
    "rich>=13.7", # For beautiful logging
    "typer>=0.12", # For a future CLI
    "python-dotenv>=1.1.1",
]

# --- Development Dependencies ---
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.0",
]

# --- Tool Configurations ---
[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Standard lints
ignore = ["E501"] # Handled by black

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]
